--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       frame: frameCount2 - 1,
       snap: "frame",
       scrollTrigger: {
-        start: window.pageYOffset,
+        start: '5000px',
         end: '+=5000px',
         scrub: 1
       },
